@@ -41,10 +41,15 @@
 <p><font color="#000000">TiLP can accept some arguments on the command
 line for specific purposes. The text below is an excerpt of the Linux
 'manpage' but it is appplicable to Windows, too. <br>
-Under Linux, manpage is accessible by typeing 'man TiLP' in the shell.<br>
+Under Linux, manpage is accessible by typeing 'man TiLP' in the shell.
 Windows users will open the <span style="font-style: italic;">ManPage.txt</span>
 file in <span style="font-style: italic;">C:\Program Files\TiLP</span>
 folder.<br>
+</font></p>
+<p><font color="#000000"><span
+ style="font-style: italic; text-decoration: underline;">Note:</span>
+when sending files from command line, TiLP may take up to 2 seconds for
+initialization.<br>
 </font></p>
 <table style="width: 100%; text-align: left;" border="0" cellpadding="2"
  cellspacing="2">
